syntax = "proto3";
package user;
option go_package = "github.com/rkfcccccc/english_words/proto/user";

/* Can Create */
message CanCreateRequest {
    string email = 1;
    string password = 2;
}   

message CanCreateResponse {
    bool ok = 1;
}

/* Create */
message CreateRequest {
    string email = 1;
    string password = 2;
}   

message CreateResponse {
    int32 user_id = 1;
}

/* Get */
message GetByIdRequest {
    int32 user_id = 1;
}

message GetByEmailRequest {
    string email = 1;
}

message GetByEmailAndPasswordRequest {
    string email = 1;
    string password = 2;
}

message User {
    int32 id = 1;
    string email = 2;
    string password = 3;
    int64 register_date = 4;
}

/* Delete */
message DeleteRequest {
    int32 user_id = 1;
}

message DeleteResponse {}

/* Service */
service UserService {
    rpc CanCreate(CanCreateRequest) returns (CanCreateResponse) {}
    rpc Create(CreateRequest) returns (CreateResponse) {}

    rpc GetById(GetByIdRequest) returns (User) {}
    rpc GetByEmail(GetByEmailRequest) returns (User) {}
    rpc GetByEmailAndPassword(GetByEmailAndPasswordRequest) returns (User) {}
    
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}